fixed issues with spacing between nav items

--- a/styles/module.css
+++ b/styles/module.css
@@ -1,13 +1,13 @@
 ul{
-  padding: 0 5% 0 5%;
+  padding: 0 10% 0 10%;
   display: flex;
   flex-direction: row;
   justify-content: center;
 }
 
 li {
-  padding-right: 10%;
-  padding-left: 10%;
+  margin-right: 15%;
+  margin-left: 15%;
   display: flex;
   flex-direction: row;
   font-size: 1.4em;
